# Computergraphic

./: .gitignore  CMakeLists.txt  config.hpp.in
shaders/: basic_colors.vert  basic_trafos.vert  bezier.vert  deferred_compose.frag  deferred_compose.vert  deferred_compose_old.frag  deferred_compose_old.vert  gasgiant_textures.comp  hsv_colors.frag  mandelbulb.frag  mandelbulb.vert  moon_textures.comp  objects.glsl  pathmarching.comp  pathmarching.frag  pathmarching.vert  pathmarching_double.frag  pathmarching_normalp.frag  planets_textures.comp  random.glsl  raymarch.frag  raytrace.frag  shadertoy.frag  shadertoy2-copy.frag  shadertoy2.frag  shadertoy3.frag  shadertoy4.frag  shadertoyEmpty.frag  shadertoyFull.frag  shading_models.frag  shading_models_old.frag  textures.comp  tonemap.frag  tonemap.vert  util.glsl
shaders/bloom/: downsample.comp  threshold.comp  upsample.comp
shaders/textures/: earth.comp  gasgiant.comp  moon.comp
src/: aufgabe_1b.cpp  aufgabe_2a.cpp  aufgabe_3.cpp  aufgabe_4.cpp  aufgabe_5.cpp  aufgabe_6.cpp  main.cpp  mainLive.cpp  mainVideo.cpp  mandelbulb.cpp  massiveRename.py  pathmarching.cpp  pathmarching_copy.cpp  reference.cpp  shadertoy.cpp  uebung_3.cpp
